...
  // MARK: - as UIViewController

  override func viewDidLoad() {
    super.viewDidLoad()

    // UI testable
    promptSwitch.accessibilityIdentifier = "prompt"

    navbarStyleSegmentedControl.accessibilityIdentifier = "navbarStyle"
    navbarBackgroundSegmentedControl.accessibilityIdentifier = "navbarBackground"
    navbarTitleSegmentedControl.accessibilityIdentifier = "navTitle"

    navbarLeftButtonItemStyleSegmentedControl.accessibilityIdentifier = "navLeftBarButtonItemStyle"
    navbarLeftButtonItemCountSegmentedControl.accessibilityIdentifier = "navLeftBarButtonItemCount"
    navbarRightButtonItemStyleSegmentedControl.accessibilityIdentifier = "navRightBarButtonItemStyle"
    navbarRightButtonItemCountSegmentedControl.accessibilityIdentifier = "navRightBarButtonItemCount"
    navbarHideBackButtonSwitch.accessibilityIdentifier = "hidesBackButton"
    navbarCoexistsWithBackButtonSwitch.accessibilityIdentifier = "coexistsWithBackButton"

    toolbarStyleSegmentedControl.accessibilityIdentifier = "toolbarStyle"
    toolbarBackgroundSegmentedControl.accessibilityIdentifier = "toolbarBackground"
    toolbarItemStyleSegmentedControl.accessibilityIdentifier = "toolbarItemStyle"
    toolbarItemLayoutSegmentedControl.accessibilityIdentifier = "toolbarItemLayout"
  }

  override func viewWillAppear(_ animated: Bool) {
    super.viewWillAppear(animated)

    // update navigation bar appearence
...
