...
                    <subviews>
                        <button opaque="NO" tag="1" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="raE-GP-D7h">
                            <rect key="frame" x="0.0" y="0.0" width="320" height="189"/>
                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                            <accessibility key="accessibilityConfiguration" identifier="Basics 1st Level Button"/>
                            <fontDescription key="fontDescription" type="system" weight="thin" pointSize="110"/>
                            <state key="normal" title="基 础"/>
                            <connections>
                                <action selector="partButtonTapped:" destination="Jri-Te-Tjm" eventType="touchUpInside" id="dD9-zo-WY8"/>
                            </connections>
                        </button>
                    </subviews>
                    <color key="backgroundColor" red="0.31674489378929138" green="0.65422052145004272" blue="0.22087863087654114" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
...
                    <subviews>
                        <button opaque="NO" tag="2" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5dC-Y8-xxP">
                            <rect key="frame" x="0.0" y="0.0" width="320" height="190"/>
                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                            <accessibility key="accessibilityConfiguration" identifier="Advanced 1st Level Button"/>
                            <fontDescription key="fontDescription" type="system" weight="thin" pointSize="110"/>
                            <state key="normal" title="进 阶"/>
                            <connections>
                                <action selector="partButtonTapped:" destination="Jri-Te-Tjm" eventType="touchUpInside" id="FWT-9S-UeM"/>
                            </connections>
                        </button>
                    </subviews>
                    <color key="backgroundColor" red="0.20824310183525085" green="0.62094390392303467" blue="0.94787877798080444" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
...
                    <subviews>
                        <button opaque="NO" tag="3" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ioh-7W-M1H">
                            <rect key="frame" x="0.0" y="0.0" width="320" height="189"/>
                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                            <accessibility key="accessibilityConfiguration" identifier="Framework 1st Level Button"/>
                            <fontDescription key="fontDescription" type="system" weight="thin" pointSize="110"/>
                            <state key="normal" title="框 架"/>
                            <connections>
                                <action selector="partButtonTapped:" destination="Jri-Te-Tjm" eventType="touchUpInside" id="7u1-rI-CfV"/>
                            </connections>
                        </button>
                    </subviews>
                    <color key="backgroundColor" red="0.94969052076339722" green="0.37390792369842529" blue="0.35997775197029114" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
...
