...
                            <constraint firstItem="nAB-fj-rG0" firstAttribute="top" secondItem="gnt-sj-Few" secondAttribute="bottom" constant="60" id="jCs-1L-Jgp"/>
                            <constraint firstAttribute="trailingMargin" secondItem="nAB-fj-rG0" secondAttribute="trailing" constant="30" id="xkD-EZ-R6L"/>
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" title="第 # 级视图" id="Sbv-Np-v59">
                        <barButtonItem key="backBarButtonItem" title=" " id="884-nL-6fd"/>
                        <barButtonItem key="rightBarButtonItem" title="跳转" id="qKO-Vq-bHH">
                            <connections>
                                <action selector="jumpButtonTapped:" destination="WMs-3W-wzF" id="gK0-2M-z8x"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
                    <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
...
            </objects>
            <point key="canvasLocation" x="1060" y="-167.76611694152925"/>
        </scene>
        <!--导航栏-->
        <scene sceneID="K9h-bx-j3V">
            <objects>
                <tableViewController storyboardIdentifier="Customize Navigation Controller" id="h4j-Pm-O5G" customClass="CustomNavigationControllerTableViewController" customModule="YiDaIOSSwiftPractices" customModuleProvider="target" sceneMemberID="viewController">
                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="static" style="grouped" separatorStyle="none" allowsSelection="NO" rowHeight="44" sectionHeaderHeight="18" sectionFooterHeight="18" id="NvJ-ch-KU0">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="1000"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
                        <sections>
                            <tableViewSection headerTitle="自定义导航栏" id="ygf-gE-Q28">
...
